[package]
name = "mrg"
version = "0.2.2"
edition = "2021"
description = "A library for parsing and serializing Gravity Defied levels"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/mrg"
keywords = ["mrg"]
rust-version = "1.59"

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
encoding_rs = "0.8.32"
